# openapi/openapi.yaml
@@ -711,9 +711,25 @@ components:
           type: string
         description:
           type: string
+        permissions:
+          type: array
+          items:
+            $ref: '#/components/schemas/SpacePermissionEnum'
       required:
         - id
         - name
+
+    SpacePermissionEnum:
+      type: string
+      enum:
+        - READ # Permission to read space details and collections
+        - EDIT_SPACE # Permission to edit space details (name, description)
+        - CREATE_COLLECTIONS # Permission to create collections within the space
+        - EDIT_COLLECTIONS # Permission to create and manage collections within the space
+        - DELETE_COLLECTIONS # Permission to delete collections within the space
+        - CREATE_BOOKMARKS # Permission to create bookmarks within the space
+        - EDIT_BOOKMARKS # Permission to create and manage bookmarks within the space
+        - DELETE_BOOKMARKS # Permission to delete bookmarks within the space
 
     UpdateSpaceDto:
       properties:
